--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/bebas-neue": "^4.5.9",
+    "@fontsource/montserrat": "^4.5.14",
+    "@react-icons/all-files": "^4.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.7.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
