--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/montserrat": "^4.5.14",
     "@react-icons/all-files": "^4.1.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.2.3",
     "gatsby": "^5.7.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^3.7.0",
@@ -29,8 +30,10 @@
     "gatsby-transformer-sharp": "^5.7.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
     "styled-components": "^5.3.8"
   }
