--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-responsive-carousel": "^3.2.23",
     "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
     "styled-components": "^5.3.8"
