--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
     "normalize.css": "^8.0.1",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-multi-carousel": "^2.8.2",
     "react-responsive-carousel": "^3.2.23",
     "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
