--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource-variable/red-hat-mono": "^5.0.3",
     "@fontsource/bebas-neue": "^4.5.9",
     "@fontsource/montserrat": "^4.5.14",
     "@react-icons/all-files": "^4.1.0",
